--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,14 +2,61 @@
 "http://www.w3.org/TR/html4/strict.dtd">
 <HTML lang="en">
   <head>
+    {% block head %}
     <Title>Merit Portal</Title>
     <script src="../static/js/jquery-2.0.3.js"></script>
     <script src="../static/js/bootstrap.js"></script>
     <link href="../static/css/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/layout.css" rel="stylesheet">
+    {% endblock %}
   </head>
 
   <body>
-    <h1>Layout</h1>
-    <h2>Test</h2>
+
+    <div class="container">
+      <div class="masthead">
+
+        {% block title %}        
+        <div class="row">
+          <div class="span12" id="page-title">
+            <h1>Merit Portal</hl>
+              <div class="btn-group">
+                <button class="btn btn-info">Summary</button>
+                <button class="btn btn-info">New Request</button>
+              </div>
+          </div>
+        </div>
+        {% endblock title %}
+
+        <div class="row page">
+          <div class="span12">
+            {% block page %}{% endblock %}
+          </div>
+        </div>
+
+        {% block footer %}
+        <div class="row">
+          <div class="span12">
+
+            <div class="navbar">
+              <div class="navbar-inner">
+                <div class="container">
+                  <ul class="nav">
+                    {% for pledge in pledges %}
+                    <li><a href="#">{{ pledge }}</a></li>
+                    {% endfor %}
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        {% endblock %}
+
+      </div>
+    </div>
+
   </body>
+
 </HTML>
