changed summary and new request navigation items to be links instead of buttons

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -24,8 +24,8 @@
                 <h1>{% block title %}{% endblock title %}</h1>
               </div>
               <div class="span3 btn-group pull-right">
-                <button class="btn btn-info">Summary</button>
-                <button class="btn btn-info">New Request</button>
+                <a href="/summary" class="btn btn-info">Summary</a>
+                <a href="/new_request" class="btn btn-info">New Request</a>
               </div>
             </div>
           </div>
