--- a/app/templates/pledge.html
+++ b/app/templates/pledge.html
@@ -11,12 +11,23 @@
   <table class="table table-striped table-bordered table-condensed" id="report-table">
     <thead>
       <tr>
-        <th>Date</th>
-        <th>Assigned By</th>
-        <th>Value</th>
+        <th class="small-column">Date</th>
+        <th class="medium-column">Assigned By</th>
+        <th class="small-column">Value</th>
         <th>Reason</th>
       </tr>
     </thead>
+    <tbody>
+      {% for i in range(10) %}
+      <tr>
+        <td> {{ i }} </td>
+        <td> {{ i }} </td>
+        <td> {{ i }} </td>
+        <td> {{ i }} </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+        
   </table>
 {% endblock %}
 
