--- a/app/templates/summary.html
+++ b/app/templates/summary.html
@@ -2,7 +2,5 @@
 
 {% block head %}
   {{ super() }}
-  <link href="../static/css/new_request.css" rel="stylesheet">
+  <link href="../static/css/summary.css" rel="stylesheet">
 {% endblock %}
-
-{% block title %}{{ page_title }}{% endblock title %}
