--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,7 +21,7 @@
           <div class="btn-group pull-right">
             <a class="btn" href="/summary">Summary</a>
             <a class="btn" href="/new_request">New Request</a>
-            <a class="btn" href="/review_requests">Review</a> 
+            <a class="btn" href="/review">Review</a> 
           </div>
           
         </div>
@@ -30,7 +30,7 @@
 
     <div class="container">
       <div class="content">
-        <h1 id="page-title">{% block title %}{% endblock title %}</h1>
+        <h1 id="page-title">{% block title %}{{ page_title }}{% endblock title %}</h1>
 
         <div class="page">
             {% block page %}{% endblock %}
