fixed rejected table bug, added reviewed model method

--- a/app/templates/pledge.html
+++ b/app/templates/pledge.html
@@ -83,7 +83,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for r in pending %}
+        {% for r in rejected %}
         <tr value={{ r.id }}>
           <td>{{ r.date | convert_date }}</td>
           <td>{{ r.assignee }}</td>
