CONTENTEDITABLE table for reviewing records

--- a/app/templates/pledge.html
+++ b/app/templates/pledge.html
@@ -3,10 +3,11 @@
 {% block head %}
   {{ super() }}
   <link href="../static/css/pledge.css" rel="stylesheet">
+  <link href="../static/css/table.css" rel="stylesheet">
 {% endblock %}
 
-{% block title %} 
-  {{ super() }} 
+{% block title %}
+  {{ super() }}
   <small>Total: </small>
 {% endblock title %}
 
