--- a/app/templates/review.html
+++ b/app/templates/review.html
@@ -1,1 +1,35 @@
 {% extends "layout.html" %}
+
+{% block head %}
+  {{ super() }}
+  <link href="../static/css/review.css">
+  <script src="../static/js/review.js"></script>
+  <link href="../static/css/table.css" rel="stylesheet">
+{% endblock head %}
+
+{% block page %}
+<table class="table table-striped table-bordered table-condensed" id="approved-table">
+  <thead>
+    <tr>
+      <th class="small-column">Approve</th>
+      <th class="small-column">Date</th>
+      <th class="medium-column">Assigned By</th>
+      <th class="small-column">Value</th>
+      <th>Reason</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for r in pending %}
+    <tr>
+      <td><input type="checkbox"></td>
+      <td>{{ r.date | convert_date }}</td>
+      <td>{{ r.assignee }}</td>
+      <td contenteditable="true">{{ r.suggested_value | round }}</td>
+      <td>{{ r.reason }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+{% endblock page %}
+
