--- a/app/templates/pledge.html
+++ b/app/templates/pledge.html
@@ -8,7 +8,7 @@
 
 {% block title %}
   {{ super() }}
-  <small>Total: </small>
+  <small>Total: {{ pledge_total }}</small>
 {% endblock title %}
 
 {% block page %}
