--- a/app/templates/pledge.html
+++ b/app/templates/pledge.html
@@ -65,7 +65,7 @@
         <tr value={{ r.id }}>
           <td>{{ r.date | convert_date }}</td>
           <td>{{ r.assignee }}</td>
-          <td>{{ r.suggested_value | round }}</td>
+          <td>{{ r.suggested_value | round(3, 'common') }}</td>
           <td>{{ r.reason }}</td>
         </tr>
         {% endfor %}
@@ -88,7 +88,7 @@
         <tr value={{ r.id }}>
           <td>{{ r.date | convert_date }}</td>
           <td>{{ r.assignee }}</td>
-          <td>{{ r.suggested_value | round }}</td>
+          <td>{{ r.suggested_value | round(3, 'common') }}</td>
           <td>{{ r.reason }}</td>
         </tr>
         {% endfor %}
